# Planetary_Formation_Simulation

./: CMakeLists.txt  README.md  TODO.md  main.py
SPH/: Constants.h  PointCalculations.cpp  PointCalculations.h  particles.py  rendering.py  setup.py  simulate.cpp
SPH/Data/: AnimationTestData.txt  Position_Data.txt
